objects/Strategic_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Strategic_Vision__c</fullName>
        <description>Documents strategic vision on account plan</description>
        <label>Strategic Vision</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tactics_Reduce_Vulnerability__c</fullName>
        <description>Captures tactics to reduce vulnerability of losing business</description>
        <label>Tactics to Reduce Vulnerability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tactics_to_Pursue_Opportunities__c</fullName>
        <description>Captures tactics to purse opportunities to grow business</description>
        <label>Tactics to Pursue Opportunities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Turnover_Recruitment_and_Retention__c</fullName>
        <description>Captures turnover, recruitment, and retention of the Group Account related to the Strategic Plan</description>
        <label>Turnover, Recruitment and Retention</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Value_prioritization_of_the_account__c</fullName>
        <label>Value / prioritization of the account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_proposition_statement__c</fullName>
        <label>Value proposition statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>Account_Name__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_Will_It_Take_To_Win__c</fullName>
        <description>Captures &apos;what it will take to win&apos; the Group Account related to the Strategic Plan</description>
        <label>What Will It Take To Win?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lower Administrative Fee</fullName>
                </value>
                <value>
                    <fullName>Enhanced Performance Guarantees</fullName>
                </value>
                <value>
                    <fullName>Increase Fees at Risk</fullName>
                </value>
                <value>
                    <fullName>Customization</fullName>
                </value>
                <value>
                    <fullName>Better Communication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_are_HCSC_competitors_doing__c</fullName>
        <description>Describes what the competition of HCSC is doing around the Account related to the strategic plan</description>
        <label>What are HCSC competitors doing?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_Is_Product_Service_Bundle_Compelling__c</fullName>
        <description>Describes how will this product, service or product/service bundle address the customer/prospect&apos;s compelling event</description>
        <label>Why Is Product/Service Bundle Compelling</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reduce Cost</fullName>
                </value>
                <value>
                    <fullName>Reduce Trend</fullName>
                </value>
                <value>
                    <fullName>Improve Service</fullName>
                </value>
                <value>
                    <fullName>Enhance Employee Recruitment &amp; Retention</fullName>
                </value>
                <value>
                    <fullName>Save Time</fullName>
                </value>
                <value>
                    <fullName>Reduce Complexity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Strategic Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Strategic_Plan__c.New_Group_Account_Plan</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Strategic Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategic Plans</pluralLabel>
    <recordTypes>
        <fullName>Account_Plan</fullName>
        <active>true</active>
        <description>*Phased out record type* that stores past records that provides the plan and strategy for growing and retaining existing accounts</description>
        <label>Account Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>ENA_Account_Plan</fullName>
        <active>true</active>
        <description>Captures the plan and strategy for growing and retaining existing ENA Accounts</description>
        <label>ENA Account Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>ENA_Prospect_Account_Plan</fullName>
        <active>true</active>
        <description>Captures the plan and strategy for winning new business for ENA Accounts</description>
        <label>ENA Prospect Account Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Group_Account_Plan</fullName>
        <active>true</active>
        <description>Captures the plan and strategy for growing and retaining existing Group Accounts</description>
        <label>Group Account Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Group_Account_Plan</fullName>
        <active>true</active>
        <description>New Strategic plan page layout for Group Account</description>
        <label>New Group Account Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity_Plan</fullName>
        <active>true</active>
        <description>*Phased out record type* that stores past records that provides plan and strategy for winning new business</description>
        <label>Opportunity Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect_Account_Plan</fullName>
        <active>true</active>
        <description>Captures plan and strategy for winning new business</description>
        <label>Group Prospect Account Plan</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>